@@ -34,6 +34,7 @@ namespace lsp
             { ".italic",        PT_BOOL     },
             { ".underline",     PT_BOOL     },
             { ".antialiasing",  PT_STRING   },
+            { ".scaling",       PT_FLOAT    },
             { NULL,             PT_UNKNOWN  }
         };
 
@@ -59,6 +60,7 @@ namespace lsp
             MultiProperty(vAtoms, P_COUNT, listener)
         {
             nOverride       = 0;
+            fScaling        = 1.0f;
         }
 
         Font::~Font()
@@ -81,6 +83,8 @@ namespace lsp
                 pStyle->set_bool(vAtoms[P_ITALIC], f.is_italic());
             if ((mask & O_UNDERLINE) && (vAtoms[P_UNDERLINE] >= 0))
                 pStyle->set_bool(vAtoms[P_UNDERLINE], f.is_underline());
+            if ((mask & O_SCALING) && (vAtoms[P_SCALING] >= 0))
+                pStyle->set_float(vAtoms[P_SCALING], fScaling);
 
             // Complicated properties
             LSPString s;
@@ -138,6 +142,8 @@ namespace lsp
 
             if ((property == vAtoms[P_SIZE]) && (pStyle->get_float(vAtoms[P_SIZE], &fvalue) == STATUS_OK))
                 f.set_size(lsp_max(0.0f, fvalue));
+            if ((property == vAtoms[P_SCALING]) && (pStyle->get_float(vAtoms[P_SCALING], &fvalue) == STATUS_OK))
+                fScaling = lsp_max(0.0f, fvalue);
 
             if ((property == vAtoms[P_BOLD]) && (pStyle->get_bool(vAtoms[P_BOLD], &bvalue) == STATUS_OK))
                 f.set_bold(bvalue);
@@ -162,7 +168,12 @@ namespace lsp
 
         void Font::get(ws::Font *f, float scaling) const
         {
-            f->set(sValue.get_name(), sValue.get_size() * lsp_max(0.0f, scaling), sValue.flags(), sValue.antialiasing());
+            f->set(
+                sValue.get_name(),
+                sValue.get_size() * lsp_max(0.0f, scaling * fScaling),
+                sValue.flags(),
+                sValue.antialiasing()
+            );
         }
 
         void Font::set_name(const char *name)
@@ -186,6 +197,18 @@ namespace lsp
                 return old;
 
             sValue.set_size(size);
+            sync();
+            return old;
+        }
+
+        float Font::set_scaling(float scale)
+        {
+            nOverride      |= O_SCALING;
+            float old = fScaling;
+            if (old == scale)
+                return old;
+
+            fScaling        = scale;
             sync();
             return old;
         }
@@ -311,7 +334,7 @@ namespace lsp
             if (s == NULL)
                 return false;
             ws::Font f(&sValue);
-            f.set_size(sValue.size() * lsp_max(0.0f, scaling));
+            f.set_size(sValue.size() * lsp_max(0.0f, scaling * fScaling));
             return s->get_font_parameters(f, fp);
         }
 
@@ -365,7 +388,7 @@ namespace lsp
                 return false;
 
             ws::Font f(&sValue);
-            f.set_size(sValue.size() * lsp_max(0.0f, scaling));
+            f.set_size(sValue.size() * lsp_max(0.0f, scaling * fScaling));
 
             ssize_t prev = 0, curr = 0, tail = 0;
             ws::font_parameters_t fp;
@@ -456,7 +479,7 @@ namespace lsp
                 return false;
 
             ws::Font f(sValue);
-            f.set_size(sValue.size() * lsp_max(0.0f, scaling)); // Update the font size
+            f.set_size(sValue.size() * lsp_max(0.0f, scaling * fScaling)); // Update the font size
             return s->get_text_parameters(f, tp, text, first, last);
         }
 
@@ -514,7 +537,7 @@ namespace lsp
                 return;
 
             ws::Font f(sValue);
-            f.set_size(sValue.size() * lsp_max(0.0f, scaling)); // Update the font size
+            f.set_size(sValue.size() * lsp_max(0.0f, scaling * fScaling)); // Update the font size
             s->out_text(f, c, x, y, text, first, last);
         }
     }
